# fraud_detection

./: .gitignore  README.md  eda.py  pyproject.toml
docs/: index.html
notebooks/: eda.py  fraud_detection.py
src/fraud_detection/data/: __init__.py  loader.py
