[project]
name = "fraud_detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "alter>=1.6",
    "lifelines>=0.30.0",
    "lightgbm>=4.6.0",
    "marimo>=0.18.1",
    "openai>=2.8.1",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "rtichoke>=0.1.22",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
